# Karpathy-Super-Powers-Plugin

./: .gitignore  Load Planning Workbook.bat  README.md  Setup Environment.bat  Start App.bat  app.py  pyproject.toml  requirements.txt
construction_db/: __init__.py  backup.py  bootstrap.py  database.py  demo.py  doctor.py  excel_io.py  followups.py  lookups.py  models.py  review.py  schema.py  search.py  settings.py  ui.py
docs/superpowers/plans/: 2026-05-14-excel-header-alias-import.md  2026-05-14-windows-launchers.md  2026-05-14-workbook-bootstrap.md
docs/superpowers/specs/: 2026-05-14-excel-header-alias-import-design.md  2026-05-14-windows-launchers-design.md  2026-05-14-workbook-bootstrap-design.md
tests/: test_phase1.py
