[project]
name = "construction-contact-platform"
version = "0.1.0"
description = "Phase 1 desktop contact/project database for construction and demolition operations"
requires-python = ">=3.11"
dependencies = [
  "SQLAlchemy>=2.0,<3.0",
  "pandas>=2.0,<3.0",
  "openpyxl>=3.1,<4.0",
  "PySide6>=6.6,<7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
